test/error/parse/ExpectUntil.mod
MODULE ExpectUntil;
BEGIN
  REPEAT
  END ExpectUntil.
